# grade-project-smb

./: .gitignore  CMakeLists.txt  README.md  main.py  vof.py
examples/: make_gif.py  run_examples.py
include/vof2d/: grid.hpp  solver.hpp
python/: bindings.cpp  vof.py
src/: solver.cpp
tests/: conftest.py  test_splash.py  test_vof.py
